k8s/06-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-api-cloud
  namespace: mlops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud-api-cloud
  template:
    metadata:
      labels:
        app: fraud-api-cloud
    spec:
      serviceAccountName: fastapi-sa
      containers:
        - name: api
          image: 471932414173.dkr.ecr.ap-south-1.amazonaws.com/fraud-detector:v2
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /ready
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: fraud-api-svc
  namespace: mlops
spec:
  selector:
    app: fraud-api-cloud
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
